tests/rosetta/out/Java/arbitrary-precision-integers-included-.error
javac: exit status 1
/tmp/ArbitraryPrecisionIntegersIncluded.java:16: error: incompatible types: int cannot be converted to String
            e = (int)(Integer.parseInt((e / 2)));
                                          ^
/tmp/ArbitraryPrecisionIntegersIncluded.java:26: error: bad operand types for binary operator '*'
                result = result * b;
                                ^
  first type:  Object
  second type: Object
/tmp/ArbitraryPrecisionIntegersIncluded.java:28: error: bad operand types for binary operator '*'
            b = b * b;
                  ^
  first type:  Object
  second type: Object
/tmp/ArbitraryPrecisionIntegersIncluded.java:29: error: incompatible types: int cannot be converted to String
            e = (int)(Integer.parseInt((e / 2)));
                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
