tests/rosetta/out/Java/arbitrary-precision-integers-included-.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:30:44Z
// arbitrary-precision-integers-included-.mochi
import java.util.*;

public class ArbitraryPrecisionIntegersIncluded {
    static bigint base = 5;
    static int pow_int(int base, int exp) {
        int result = 1;
        int b = base;
        int e = exp;
        while (e > 0) {
            if (Objects.equals(e % 2, 1)) {
                result = (int)(result * b);
            }
            b = (int)(b * b);
            e = (int)(Integer.parseInt((e / 2)));
        }
        return result;
    }
    static bigint pow_big(bigint base, int exp) {
        bigint result = 1;
        bigint b = base;
        int e = exp;
        while (e > 0) {
            if (Objects.equals(e % 2, 1)) {
                result = result * b;
            }
            b = b * b;
            e = (int)(Integer.parseInt((e / 2)));
        }
        return result;
    }
    public static void main(String[] args) {
    int e1 = pow_int(3, 2);
    int e2 = pow_int(4, e1);
    bigint x = pow_big(base, e2);
    String s = String.valueOf(x);
    System.out.println("5^(4^(3^2)) has" + " " + s.length() + " " + "digits:" + " " + s.substring(0, 20) + " " + "..." + " " + s.substring(s.length() - 20, s.length()));
    }
}
